[gd_scene load_steps=7 format=3 uid="uid://wpwan0wnqg3s"]

[ext_resource type="Script" path="res://scenes/ui/char_selector.gd" id="1_rs0pr"]
[ext_resource type="Resource" uid="uid://drbh5deiiyr6f" path="res://scenes/run/run_startup.tres" id="2_jy7ne"]
[ext_resource type="Texture2D" uid="uid://c87pliqhyiybv" path="res://art/Ironclad_selector.png" id="3_5prw4"]
[ext_resource type="Texture2D" uid="uid://bfvi02kojsa00" path="res://art/tile_0103.png" id="4_wuesw"]
[ext_resource type="Texture2D" uid="uid://pgj8vfpj6tc5" path="res://art/tile_0130.png" id="5_ee1nt"]

[sub_resource type="ButtonGroup" id="ButtonGroup_gb06a"]

[node name="CharSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rs0pr")
run_startup = ExtResource("2_jy7ne")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -61.5
offset_top = -56.0
offset_right = 61.5
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 12
text = "select you charactor"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -37.0
offset_right = 100.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="IronClad" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_gb06a")

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/IronClad"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_5prw4")
stretch_mode = 5

[node name="SilenceHunter" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_gb06a")

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/SilenceHunter"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_wuesw")
stretch_mode = 5

[node name="Wizard" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_gb06a")

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Wizard"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_ee1nt")
stretch_mode = 5

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -14.0
grow_horizontal = 0
grow_vertical = 0
disabled = true
text = "Start"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 45.0
offset_right = 46.0
offset_bottom = 85.0

[node name="Name" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Description" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 2

[node name="CharacterPortrait" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 165.0
offset_top = 7.0
offset_right = 248.0
offset_bottom = 91.0
stretch_mode = 5

[connection signal="pressed" from="HBoxContainer/IronClad" to="." method="_on_iron_clad_pressed"]
[connection signal="pressed" from="HBoxContainer/SilenceHunter" to="." method="_on_silence_hunter_pressed"]
[connection signal="pressed" from="HBoxContainer/Wizard" to="." method="_on_wizard_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
